--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -40,9 +40,9 @@ OPTION_VALUE_AUTO=自动
 OPTION_VALUE_SEC=秒
 OPTION_VALUE_SECS=秒
 
-OPTION_VALUE_PLAIN=空白
-OPTION_VALUE_OLINE1=OLine1
-OPTION_VALUE_OLINE2=OLine2
+;TODO: OPTION_VALUE_PLAIN=stylized
+;TODO: OPTION_VALUE_OLINE1=with thin edge
+;TODO: OPTION_VALUE_OLINE2=with thick edge
 
 OPTION_VALUE_SIMPLE=简单
 OPTION_VALUE_ZOOM=缩放
@@ -68,11 +68,6 @@ OPTION_VALUE_SING=K歌
 OPTION_VALUE_SELECT_PLAYERS=选择玩家
 OPTION_VALUE_OPEN_MENU=打开菜单
 
-;TODO: OPTION_VALUE_SYSTEM_CURSOR=On [System Cursor]
-;TODO: OPTION_VALUE_GAME_CURSOR=On [Game Cursor]
-OPTION_VALUE_HARDWARE_CURSOR=系统指针
-OPTION_VALUE_SOFTWARE_CURSOR=自带指针
-
 SING_LOADING=载入……
 
 SING_CHOOSE_MODE=选择模式
@@ -86,9 +81,6 @@ SING_TOOLS=工具
 
 SING_STATS=统计
 SING_STATS_DESC=查看统计资料
-
-SING_EDITOR=编辑器
-SING_EDITOR_DESC=制作自己的歌曲
 
 SING_GAME_OPTIONS=游戏选项
 SING_GAME_OPTIONS_DESC=更改游戏设置
@@ -117,15 +109,16 @@ SING_OPTIONS_GAME_DIFFICULTY=难度
 SING_OPTIONS_GAME_LANGUAGE=语言
 SING_OPTIONS_GAME_TABS=标签
 SING_OPTIONS_GAME_SORTING=排列
-SING_OPTIONS_GAME_DEBUG=调试
+;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Controller support
 
 SING_OPTIONS_GRAPHICS_WHEREAMI=画面选项
 SING_OPTIONS_GRAPHICS_DESC=画面设置
 SING_OPTIONS_GRAPHICS_RESOLUTION=分辨率
 SING_OPTIONS_GRAPHICS_FULLSCREEN=全屏
-SING_OPTIONS_GRAPHICS_DEPTH=色深
+;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
+;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen Fading
+;TODO: SING_OPTIONS_GRAPHICS_LOADANIMATION=Load Animation
 SING_OPTIONS_GRAPHICS_VISUALIZER=可视化
-SING_OPTIONS_GRAPHICS_OSCILLOSCOPE=示波器
 SING_OPTIONS_GRAPHICS_LINEBONUS=加分线
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=影片大小
 
@@ -141,11 +134,6 @@ SING_OPTIONS_SOUND_TWO_PLAYERS_MODE=双人模式
 ;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music Gain
 SING_OPTIONS_SOUND_PREVIEWVOLUME=预览音量
 SING_OPTIONS_SOUND_PREVIEWFADING=预览渐变
-
-;TODO: SING_OPTIONS_INPUT_WHEREAMI=Options Input
-;TODO: SING_OPTIONS_INPUT_DESC=Input settings
-;TODO: SING_OPTIONS_INPUT_MOUSE=Mouse
-;TODO: SING_OPTIONS_INPUT_JOYPAD_SUPPORT=Controller support
 
 SING_OPTIONS_LYRICS_WHEREAMI=歌词选项
 SING_OPTIONS_LYRICS_DESC=歌词设置
@@ -168,35 +156,27 @@ SING_OPTIONS_RECORD_CHANNEL=频道
 
 SING_OPTIONS_ADVANCED_WHEREAMI=高级选项
 SING_OPTIONS_ADVANCED_DESC=高级设置
-SING_OPTIONS_ADVANCED_EFFECTSING=演唱效果
-SING_OPTIONS_ADVANCED_SCREENFADE=画面渐变
-SING_OPTIONS_ADVANCED_LOADANIMATION=载入动画
+;TODO: SING_OPTIONS_ADVANCED_DEBUG=Debug
+;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=安全问题
 SING_OPTIONS_ADVANCED_LINEBONUS=加分线
 ;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
 SING_OPTIONS_ADVANCED_ONSONGCLICK=选歌之后
 SING_OPTIONS_ADVANCED_PARTYPOPUP=自动派对菜单
 
-SING_EDIT=编辑器
-SING_EDIT_MENU_DESCRIPTION=制作自己的歌曲
-
-SING_EDIT_BUTTON_DESCRIPTION_CONVERT=从midi文件导入文本
-SING_EDIT_BUTTON_DESCRIPTION_EXIT=返回
-SING_EDIT_BUTTON_CONVERT=导入
-SING_EDIT_BUTTON_EXIT=返回
-
-SING_EDIT_NAVIGATE=导航
-SING_EDIT_SELECT=选择
-SING_EDIT_EXIT=返回
-
 SING_LEGEND_SELECT=选择
 SING_LEGEND_NAVIGATE=导航
 SING_LEGEND_CONTINUE=继续
 SING_LEGEND_ESC=返回
 
-SING_PLAYER_DESC=输入玩家名
-SING_PLAYER_WHEREAMI=玩家名
-SING_PLAYER_ENTER_NAME=输入名字
+;TODO: SING_PLAYER_TITLE=Profiles
+;TODO: SING_PLAYER_READY=Players ready to sing
+;TODO: SING_PLAYER_COUNT=Number of players
+;TODO: SING_PLAYER_EDIT=Customize a player
+;TODO: SING_PLAYER_NAME=Write your name
+;TODO: SING_PLAYER_COLOR=Pick a color
+;TODO: SING_PLAYER_LEVEL=Choose a level
+;TODO: SING_PLAYER_AVATAR=Select your avatar
 
 SING_DIFFICULTY_DESC=选择难度
 SING_DIFFICULTY_WHEREAMI=难度
@@ -211,10 +191,15 @@ SING_SONG_SELECTION_GOTO=转到……
 SING_SONG_SELECTION=歌曲选择
 SING_SONG_SELECTION_MENU=菜单
 SING_SONG_SELECTION_PLAYLIST=播放列表
+;TODO: SING_SONGS_IN_CAT=Song
 SING_SONGS_IN_CAT=歌曲
 PLAYLIST_CATTEXT=播放列表： %s
+;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
+;TODO: SING_SONG_SELECTION_LEGEND_VIDEO=Video
+;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
+;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
+;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
 
-;TODO: SING_TIME=TIME
 SING_TOTAL=全部
 SING_MODE=独唱
 SING_NOTES=音符
@@ -565,36 +550,6 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=下位演唱歌手
 ;TODO: PARTY_MODE_TOURNAMENT_WIN_DESC=Round result
 ;TODO: PARTY_MODE_TOURNAMENT_CHAMPION=The champion is: %0:s!
 
-;TODO: EDIT_TITLE=Title:
-;TODO: EDIT_ARTIST=Artist:
-;TODO: EDIT_MP3=MP3:
-;TODO: EDIT_BPM=BPM:
-;TODO: EDIT_GAP=GAP:
-;TODO: EDIT_COVER=Cover:
-;TODO: EDIT_BACKGROUND=Background:
-
-;TODO: EDIT_START=Start:
-;TODO: EDIT_DURATION=Duration:
-;TODO: EDIT_TONE=Tone:
-;TODO: EDIT_LYRIC=Lyric:
-;TODO: EDIT_VIDEOGAP=Video Gap:
-;TODO: EDIT_VOLUME_AUDIO=Audio Volume:
-;TODO: EDIT_VOLUME_MIDI=Midi Volume:
-;TODO: EDIT_VOLUME_CLICK=Click Volume:
-;TODO: INFO_UNDO=Undo last operation
-
-INFO_FILE_SAVED=文件已保存
-;TODO: INFO_TIME_FIXED=Timings corrected
-;TODO: INFO_CAPITALIZE=Capitalization corrected
-;TODO: INFO_EXIT=Do you want leave editor without save ?
-;TODO: INFO_SONG_RELOADED=Song reloaded
-;TODO: INFO_DIVIDED_BPM=BPM Divided
-;TODO: INFO_MULTIPLIED_BPM=BPM Multiplied
-;TODO: INFO_PLAY_SONG=Play song
-;TODO: INFO_PLAY_SENTENCE=Play sentence
-;TODO: INFO_CURRENT_LINE=Line:
-;TODO: INFO_CURRENT_NOTE=Note:
-
 ;TODO: INFO_MIDI_CHANNEL_OFF= Channel %0:s off!
 ;TODO: INFO_MIDI_CHANNEL_RESET= All channel's on!
 
@@ -638,6 +593,7 @@ SING_OPTIONS_WEBCAM_EFFECT=效果
 ;TODO: SING_OPTIONS_WEBCAM_BRIGHTNESS=Brightness
 ;TODO: SING_OPTIONS_WEBCAM_SATURATION=Saturation
 ;TODO: SING_OPTIONS_WEBCAM_HUE=Hue
+;TODO: SING_OPTIONS_WEBCAM_PREVIEW=Activate preview
 ;TODO: SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable Preview
 ;TODO: SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable Preview
 
@@ -710,7 +666,7 @@ OPTION_VALUE_TO_SING=演唱
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_SIZE=Size
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Alpha
+;TODO: JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Transparency
 JUKEBOX_SONGOPTIONS_LYRIC_COLOR=颜色
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_LINE=Line
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Property
@@ -742,9 +698,17 @@ OPTION_VALUE_ALL=所有
 ;TODO: OPTION_VALUE_PLAYER=Player
 
 ;TODO: SING_ABOUT=About
-;TODO: SING_ABOUT_DESC=About Ultrastar Deluxe
+;TODO: SING_ABOUT_DESC=About Ultrastar Deluxe WorldParty
 ;TODO: ABOUT_MAIN=About...
-;TODO: ABOUT_MAIN_DESC=Ultrastar Deluxe
+;TODO: ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
 ;TODO: ABOUT_MAIN_WHEREAMI=About...
 ;TODO: ABOUT_USDX_CREDITS=Credits
-;TODO: ABOUT_OVERVIEW=UltraStar Deluxe is a free OpenSource karaoke game for your PC. The gameplay experience is similar to that of the commercial product SingStar™ by Sony Computer Entertainment, which is exclusively available for the Playstation®. Unlike SingStar™, however, UltraStar Deluxe allows users to create their own songs and sing them on their PC.\nBy publishing the sourcecode, we’ve enabled you to customize the game completly to your heart’s content, desires and particular needs.\nEspecially you are allowed to modify the product as you wish.\n\nCreate your own themes or download content from the community, such as plugins, free songs or code patches for extended features.\nIn party mode it allows up to twelve players to sing along to your favorite music in order to score points, depending on the pitch of the voice and the rhythm of singing.
+;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
+;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
+;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
+;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
+;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
+;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+
+;TODO: DEVELOPERS_TITLE=Developed by
+;TODO: DEVELOPERS_OVERVIEW=People who has contributed to this project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
