added progress bar to song loading

--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -70,7 +70,9 @@ OPTION_VALUE_SELECT_PLAYERS=Elegir jugadores
 OPTION_VALUE_OPEN_MENU=Abrir menú
 
 SING_LOADING=Cargando...
+SING_LOADING_SONGS=Cargando canciones
 SING_LOADING_CHECK_FOLDER=Buscando canciones en la carpeta %s
+SING_LOADING_LOAD_FOLDER=Cargando canciones de la carpeta %s
 SING_LOADING_FINISH=Carga finalizada. ¡Ya puedes cantar!
 
 SING_CHOOSE_MODE=Elige
