--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -71,7 +71,9 @@ OPTION_VALUE_OPEN_MENU=Open Menu
 
 
 SING_LOADING=Loading...
+SING_LOADING_SONGS=Loading songs
 SING_LOADING_CHECK_FOLDER=Searching songs on folder %s
+SING_LOADING_LOAD_FOLDER=Loading songs of folder %s
 SING_LOADING_FINISH=Load finished. ¡Sing!
 
 SING_CHOOSE_MODE=Choose Mode
