remove original credits from screen about
Original Credits can be found at copyright file.

--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -69,6 +69,9 @@ OPTION_VALUE_SELECT_PLAYERS=Spieler auswählen
 OPTION_VALUE_OPEN_MENU=Menü öffnen
 
 SING_LOADING=Lädt...
+;TODO: SING_LOADING_SONGS=Loading songs
+;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
+;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
 
 SING_CHOOSE_MODE=Modus wählen
 SING_SING=Singen
@@ -699,9 +702,6 @@ OPTION_VALUE_PLAYER=Spieler
 SING_ABOUT=Über
 SING_ABOUT_DESC=Über Utrastar Deluxe WorldParty
 ABOUT_MAIN=Über...
-ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
-ABOUT_MAIN_WHEREAMI=Erfahre etwas über...
-ABOUT_USDX_CREDITS=Credits
 ;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
