--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -71,8 +71,8 @@ OPTION_VALUE_OPEN_MENU=Open Menu
 
 SING_LOADING=Loading...
 SING_LOADING_SONGS=Loading songs
-SING_LOADING_CHECK_FOLDER=Searching songs on folder %s
-SING_LOADING_LOAD_FOLDER=Loading songs of folder %s
+SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
+SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
 
 SING_CHOOSE_MODE=Choose Mode
 SING_SING=Sing
@@ -701,9 +701,6 @@ OPTION_VALUE_PLAYER=Player
 SING_ABOUT=About
 SING_ABOUT_DESC=About Ultrastar Deluxe WorldParty
 ABOUT_MAIN=About...
-ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
-ABOUT_MAIN_WHEREAMI=About...
-ABOUT_USDX_CREDITS=Credits
 ABOUT_USDX_DEVELOPEDBY=Developed by
 ABOUT_CHECK_CHECKING=Checking for new updates...
 ABOUT_CHECK_AVAILABLE=There is a new version available
