--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -69,6 +69,9 @@ OPTION_VALUE_SELECT_PLAYERS=Elixir Xogadores
 OPTION_VALUE_OPEN_MENU=Abrir menú
 
 SING_LOADING=Cargando...
+;TODO: SING_LOADING_SONGS=Loading songs
+;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
+;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
 
 SING_CHOOSE_MODE=Elixe
 SING_SING=Canta!
@@ -696,9 +699,6 @@ OPTION_VALUE_PLAYER=Xogador
 ;TODO: SING_ABOUT=About
 ;TODO: SING_ABOUT_DESC=About Ultrastar Deluxe WorldParty
 ;TODO: ABOUT_MAIN=About...
-;TODO: ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
-;TODO: ABOUT_MAIN_WHEREAMI=About...
-;TODO: ABOUT_USDX_CREDITS=Credits
 ;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
