--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -68,8 +68,10 @@ OPTION_VALUE_SING=Dainuoti
 OPTION_VALUE_SELECT_PLAYERS=Pasirinkite žaidėjus
 OPTION_VALUE_OPEN_MENU=Atidarykite meniu
 
-
 SING_LOADING=Kraunasi...
+;TODO: SING_LOADING_SONGS=Loading songs
+;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
+;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
 
 SING_CHOOSE_MODE=Pasirinkite režimą
 SING_SING=Dainuoti
@@ -698,9 +700,6 @@ OPTION_VALUE_PLAYER=Žaidėjas
 SING_ABOUT=Apie
 SING_ABOUT_DESC=Apie Ultrastar Deluxe WorldParty
 ABOUT_MAIN=Apie...
-ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
-ABOUT_MAIN_WHEREAMI=Apie...
-ABOUT_USDX_CREDITS=Kreditai
 ABOUT_USDX_DEVELOPEDBY=Sukūrė
 ABOUT_CHECK_CHECKING=Naujų naujinių tikrinimas...
 ABOUT_CHECK_AVAILABLE=Yra nauja versija
