--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -69,6 +69,9 @@ OPTION_VALUE_SELECT_PLAYERS=Escolher Jogadores
 OPTION_VALUE_OPEN_MENU=Abrir Menu
 
 SING_LOADING=A Ler...
+;TODO: SING_LOADING_SONGS=Loading songs
+;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
+;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
 
 SING_CHOOSE_MODE=Escolha o Modo
 SING_SING=Cantar
@@ -697,9 +700,6 @@ OPTION_VALUE_PLAYER=Jogador
 SING_ABOUT=Sobre
 SING_ABOUT_DESC=Sobre o Ultrastar Deluxe WorldParty
 ABOUT_MAIN=Sobre...
-ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
-ABOUT_MAIN_WHEREAMI=Sobre...
-ABOUT_USDX_CREDITS=Créditos
 ;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
