--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -69,6 +69,9 @@ OPTION_VALUE_SELECT_PLAYERS=Choix des joueurs
 OPTION_VALUE_OPEN_MENU=Ouvrir le menu
 
 SING_LOADING=Chargement...
+;TODO: SING_LOADING_SONGS=Loading songs
+;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
+;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
 
 SING_CHOOSE_MODE=Choisissez un mode de jeu
 SING_SING=Chanter
@@ -699,9 +702,6 @@ OPTION_VALUE_PLAYER=Joueur
 SING_ABOUT=À propos
 SING_ABOUT_DESC=À propos Ultrastar Deluxe WorldParty
 ABOUT_MAIN=À propos...
-ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
-ABOUT_MAIN_WHEREAMI=À propos...
-ABOUT_USDX_CREDITS=Crédits
 ;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
