--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -69,6 +69,9 @@ OPTION_VALUE_SELECT_PLAYERS=Tagh cluicheadairean
 OPTION_VALUE_OPEN_MENU=Fosgail an clàr-taice
 
 SING_LOADING=’Ga luchdadh…
+;TODO: SING_LOADING_SONGS=Loading songs
+;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
+;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
 
 SING_CHOOSE_MODE=Tagh am modh
 SING_SING=Seinn
@@ -697,9 +700,6 @@ OPTION_VALUE_PLAYER=Cluicheadair
 SING_ABOUT=Mu dhèidhinn
 SING_ABOUT_DESC=Mu Ultrastar Deluxe WorldParty
 ABOUT_MAIN=Mu dhèidhinn…
-ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
-ABOUT_MAIN_WHEREAMI=Mu dhèidhinn…
-ABOUT_USDX_CREDITS=Urram
 ;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
