--- a/game/languages/Norsk.ini
+++ b/game/languages/Norsk.ini
@@ -69,6 +69,9 @@ OPTION_VALUE_SING=syng
 ;TODO: OPTION_VALUE_OPEN_MENU=Open Menu
 
 SING_LOADING=Laster...
+;TODO: SING_LOADING_SONGS=Loading songs
+;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
+;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
 
 SING_CHOOSE_MODE=velg modus
 SING_SING=syng
@@ -698,9 +701,6 @@ OPTION_VALUE_ALL=Alt
 ;TODO: SING_ABOUT=About
 ;TODO: SING_ABOUT_DESC=About Ultrastar Deluxe WorldParty
 ;TODO: ABOUT_MAIN=About...
-;TODO: ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
-;TODO: ABOUT_MAIN_WHEREAMI=About...
-;TODO: ABOUT_USDX_CREDITS=Credits
 ;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
