--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -69,6 +69,9 @@ OPTION_VALUE_SELECT_PLAYERS=Wybierz graczy
 OPTION_VALUE_OPEN_MENU=Otwórz Menu
 
 SING_LOADING=Wczytywanie...
+;TODO: SING_LOADING_SONGS=Loading songs
+;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
+;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
 
 SING_CHOOSE_MODE=Wybierz tryb
 SING_SING=Śpiewaj
@@ -697,9 +700,6 @@ OPTION_VALUE_PLAYER=Gracz
 SING_ABOUT=Informacje
 SING_ABOUT_DESC=Informacje o Ultrastar Deluxe WorldParty
 ABOUT_MAIN=Informacje...
-ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
-ABOUT_MAIN_WHEREAMI=Informacje...
-;TODO: ABOUT_USDX_CREDITS=Credits
 ;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
