--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -69,6 +69,9 @@ OPTION_VALUE_SELECT_PLAYERS=Valitse pelaajat
 OPTION_VALUE_OPEN_MENU=Avaa valikko
 
 SING_LOADING=Moikkamoi! Tää systeemi niinku lataa...
+;TODO: SING_LOADING_SONGS=Loading songs
+;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
+;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
 
 SING_CHOOSE_MODE=Valitse moodi
 SING_SING=Laula
@@ -697,9 +700,6 @@ OPTION_VALUE_ALL=Kaikki
 ;TODO: SING_ABOUT=About
 ;TODO: SING_ABOUT_DESC=About Ultrastar Deluxe WorldParty
 ;TODO: ABOUT_MAIN=About...
-;TODO: ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
-;TODO: ABOUT_MAIN_WHEREAMI=About...
-;TODO: ABOUT_USDX_CREDITS=Credits
 ;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
