--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -69,6 +69,9 @@ OPTION_VALUE_SELECT_PLAYERS=Välj spelare
 OPTION_VALUE_OPEN_MENU=Öppna meny
 
 SING_LOADING=Läser in...
+;TODO: SING_LOADING_SONGS=Loading songs
+;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
+;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
 
 SING_CHOOSE_MODE=Välj läge
 SING_SING=Sjung
@@ -698,9 +701,6 @@ OPTION_VALUE_ALL=Alla
 ;TODO: SING_ABOUT=About
 ;TODO: SING_ABOUT_DESC=About Ultrastar Deluxe WorldParty
 ;TODO: ABOUT_MAIN=About...
-;TODO: ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
-;TODO: ABOUT_MAIN_WHEREAMI=About...
-;TODO: ABOUT_USDX_CREDITS=Credits
 ;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
